// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox test should errored with disabled classes 1`] = `
<div>
  <label
    class="sc-eDvSVe cIHxS"
  >
    <div
      class="sc-jSUZER hJJcIb"
    >
      <input
        class="peer hidden"
        type="checkbox"
      />
      <div
        class="sc-gKPRtg ezeWRj"
      />
      <div
        class="sc-iBYQkv cFoOhr"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render 1`] = `
<div>
  <label
    class="sc-eDvSVe cIHxS"
  >
    <div
      class="sc-jSUZER bkDjTI"
    >
      <input
        class="peer hidden"
        type="checkbox"
      />
      <div
        class="sc-gKPRtg hEprCf"
      />
      <div
        class="sc-iBYQkv dKohrg"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render with disabled classes 1`] = `
<div>
  <label
    class="sc-eDvSVe ZXIxN"
    disabled=""
  >
    <div
      class="sc-jSUZER bkDjTI"
    >
      <input
        class="peer hidden"
        disabled=""
        type="checkbox"
      />
      <div
        class="sc-gKPRtg fCxYfH"
        disabled=""
      />
      <div
        class="sc-iBYQkv fbmVPj"
        disabled=""
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
